--- a/landing-page/styles.css
+++ b/landing-page/styles.css
@@ -1,9 +1,10 @@
 #content {
     text-align: center;
-    margin: 130px auto auto;
     font-family: 'Montserrat', sans-serif;
     color: #EEEEEE;
     font-size: 2rem;
+    position: relative;
+    margin: 0 auto;
 }
 
 #logo {
@@ -39,4 +40,17 @@
 
 .hidden {
     visibility: hidden;
+}
+
+.w-100 {
+    height: 400px !important;
+    margin-bottom: 50px;
+}
+
+
+.carousel {
+    margin: 75px auto 0;
+    width: 70% !important;
+    height: 200px;
+    border: none;
 }
