name input size made larger

--- a/landing-page/styles.css
+++ b/landing-page/styles.css
@@ -14,7 +14,7 @@
 
 #name {
     border-radius: 1rem;
-    font-size: 15px;
+    font-size: 1rem;
     margin-right: 5px;
     padding: 10px 15px;
 }
